crates/data-dict/tests/snapshots/validate_spec__s07_enum_without_values.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: c
        type: enum
────────────────────────────────────────
Error: [S07] An `enum` column must list its categories with `values`.
   ╭─[ dict.yaml:7:15 ]
   │
 4 │   - name: table
   │ 
 6 │       - name: c
 7 │         type: enum
   │               ──┬─  
   │                 ╰─── has type `enum` but is missing `values`
───╯
